# readfit

./: .gitignore  README.md  pyproject.toml  sample.txt  sample.txt~
src/readfit/: __init__.py  __main__.py  cli.py  fit.py  input.py  output.py
tests/: conftest.py  test_cli.py  test_fit.py  test_input.py  test_output.py
