[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "readfit"
version = "0.1.0"
description = "Starter scaffold for the readfit Python project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "mfr24" }
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
readfit = "readfit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
